--- a/desktop.css
+++ b/desktop.css
@@ -46,6 +46,9 @@ header .desktop-nav ul .sign-up{
     padding: 8px 20px;
     border-radius: 5px;
 }
+main{
+    height: 78vh;
+}
 main .main__buttons-container{
     width: 100%;
     display: flex;
@@ -68,4 +71,19 @@ main .main__buttons-container button:hover{
     background-color: #f8f9fa;
     border: 1px solid #dadce0;
     color: #202124;
+}
+footer{
+    width: 100%;
+    height: 12vh;
+}
+footer .footer__country{
+    height: 50%;
+}
+footer .footer__info{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    height: 50%;
 }
