--- a/styles.css
+++ b/styles.css
@@ -15,9 +15,12 @@ html{
     font-size: 62.5%;
     font-family: Arial, Helvetica, sans-serif;
 }
-.desktop-nav{
+.desktop-styles{
     display: none;
 }
+/* .desktop-nav{
+    display: none;
+} */
 header{
     width: 100%;
     min-width: 320px;
@@ -157,7 +160,7 @@ footer .footer__country{
     border-bottom: 1px solid #e4e4e4;
 }
 footer .footer__country p{
-    padding-left: 10px;
+    padding-left: 20px;
     font-size: 1.6rem;
     color: var(--footer-color);
 }
